# Crossover_sample

./: LICENSE
client/: CMakeLists.txt  exceptions.h  main.cpp  monitor.cpp  monitor.h  os.h  tcpIpClient.cpp  tcpIpClient.h
server/: CMakeLists.txt  clientInfo.h  database.cpp  database.h  exceptions.h  mailer.cpp  mailer.h  main.cpp  server.cpp  server.h
